fix: set overflow hidden to level 3

--- a/packages/components/ng-ovh-sidebar-menu/src/index.less
+++ b/packages/components/ng-ovh-sidebar-menu/src/index.less
@@ -416,7 +416,7 @@
                 .menu-level-3 {
                   .item-container {
                     position: relative;
-                    overflow-y: hidden;
+                    overflow: hidden;
 
                     &::before {
                       content: " ";
